# jkernel

./: Cargo.toml  README.md  x86_64-jack_os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
