[package]
name = "jkernel"
version = "0.1.0"
authors = ["Jack Cloudman <jack@jackcloudman.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding in case of panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding in case of panic

[dependencies]
